[package]
name = "snowcast"
version = "0.1.0"
authors = ["Kartik Singhal <kartiksinghal@gmail.com>"]

[dependencies]
byteorder = "0.5"
env_logger = "0.3"
log = "0.3"
mio = "0.6"
slab = "0.3"

[dependencies.clap]
version = "2"
default-features = false

[[bin]]
name = "snowcast_server"
path = "src/main.rs"

[[bin]]
name = "snowcast_listener"
path = "src/udp_client.rs"

[[bin]]
name = "snowcast_control"
path = "src/tcp_client.rs"
