[package]
name = "rustcast"
version = "0.1.0"
authors = ["Kartik Singhal <kartiksinghal@gmail.com>"]

[dependencies]
byteorder = "0.5"
env_logger = "0.3"
log = "0.3"
mio = "0.6"
slab = "0.3"

[dependencies.clap]
version = "2"
default-features = false

[[bin]]
name = "rustcast_server"
path = "src/main.rs"

[[bin]]
name = "rustcast_listener"
path = "src/udp_client.rs"

[[bin]]
name = "rustcast_control"
path = "src/tcp_client.rs"
